--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -276,9 +276,13 @@ button, .buttonType1{
 .buttonType1{
 	color: white;
 }
+#next, #ok, #solution {
+	margin: 1.5vmin;
+   display: inline;
+   position: initial;
+}
 
-
-#ok, #reset, #solution, #next, #info {
+#reset, #nextblock, #info {
 	position: absolute;
 	bottom: 0;
 	margin: 1.5vmin;
@@ -310,8 +314,8 @@ button, .buttonType1{
 }
 
 
-#ok, #next{
-	right: 0;
+#nextblock {
+  right: 0;
 }
 
 #next{
@@ -339,10 +343,6 @@ button, .buttonType1{
 }
 
 #info {
-	right: 12vmin;
-}
-
-#solution{
 	right: 12vmin;
 }
 
@@ -417,7 +417,7 @@ button, .buttonType1{
 	margin-left: 0.5vmin;
 }
 
-#scoreWord, #bestScoreWord, #numPoints, #reset, #solution, #ok, #next, #newGame, #settingsButton, #info {
+#scoreWord, #bestScoreWord, #numPoints, #reset, #nextblock, #newGame, #settingsButton, #info {
 	display: inline-block;
 }
 
